--- a/templates/tienda/producto.html
+++ b/templates/tienda/producto.html
@@ -3,11 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h2>Home</h2>
+    <h2>Vista Producto</h2>
     <p>Hello!!!</p>
 
-
-
-
-    
 {% endblock %}
