--- a/templates/plantilla.html
+++ b/templates/plantilla.html
@@ -3,21 +3,215 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="plantilla.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>{% block title %}Ecommerce{% endblock %}</title>
 </head>
+<style>
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+/* contenerdor principal de la pagina */
+.container{
+    min-height: 100dvh;
+    display: grid;
+    grid-template-rows: auto 1fr auto ;
+}
+header{
+    /* background-color: white; */
+    /* border-bottom: 1px solid grey; */
+    display: flex;
+    flex-direction: column;
+    /* box-shadow: 0 1px gray; */
+    box-shadow: 0px 1px 6px 0px rgba(105, 104, 104, 0.575);
+}
+/* nav de logo */
+.navp{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* border-bottom: 1px solid grey; */
+    /* column-gap: 350px; */
+}
+.sesion{
+    display: flex;
+    column-gap: 30px;
+    align-items: center;  
+}
+.al{
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+}
+.lg{
+    background-color: rgb(231, 151, 59);
+    padding: 10px;
+    border-radius: 30px;
+}
+img{
+    height: 50px;
+}
+/* nav categorias */
+.navbar{
+    display: flex;
+    /* column-gap: 700px; */
+    align-items: center;
+    justify-content: space-around;
+}
+.an{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+}
+.opcion{
+    display: flex;
+    column-gap: 20px;
+}
+.catego{
+    align-items: center;
+    padding-right: 150px;
+    
+}
+.an:hover {
+    background-color: black;
+    color: white;
+    border-radius: 20px;  
+}
+/* carrito */
+.car:hover{
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    border: none;
+}
+.car{
+    color: black;
+    text-decoration: none;
+    padding: 10px;
+    border: 1px solid grey;
+    border-radius: 20px;
+}
+/* buscador */
+.container-search{
+    position: relative;
+
+}
+.search{
+    padding: 10px;
+    width: 350px;
+    border-radius: 20px;
+    border: 1px solid gray;
+    outline: 0;
+}
+.btn{
+    background-color: rgb(231, 151, 59);
+    /* width: 31px;
+    height: 31px; */
+    padding: 10px; 
+    position: absolute;
+    border: 0;
+    border-radius: 0 20px 20px 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    color: white;
+    
+}
+/* footer pie de pagina */
+footer{
+    background-color: rgb(235, 115, 18);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    box-shadow: 0px -2px 5px -1px rgba(39, 23, 4, 0.75);
+}
+.parrafo{
+    text-align: center;
+}
+
+.lista{
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    justify-content: center;
+    column-gap: 10px;
+    /* padding: 10px; */
+}
+.lg{
+    color: white;
+}
+
+</style>
 <body>
-    <nav>
-        App
-    </nav>
-
-    <main>
-        {% block content %}
-        <!-- Content will be inserted here -->
-        {% endblock %}
-    </main>
-
-    <footer>
-        Final
-    </footer>
+    <div class="container">
+        <header>
+            <div class="navp">
+                <div>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7Gnrz5X8v3i9QqBJ0fUaGjKS4h2-mA8WJXA&s" alt="">
+                </div>
+                <div class="container-search">
+                    <form action="">
+                        <input class="search" type="text" name="" id="" placeholder="Buscar...">
+                        <button class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
+                </div>
+                <div class="sesion">
+                    <div class="carrito">
+                        <a class="car" href="">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            carrito
+                        </a>
+                    </div>
+                    <div class="lg">
+                        <a class="al" href="">
+                            <i class="fa-solid fa-user"></i> 
+                            iniciar sesion
+                        </a>
+                    </div>
+                    <div class="lg">
+                        <a class="al" href="">unete a nosotros</a>
+                    </div>
+                </div>
+            </div>
+            <nav class="navbar">
+                <div class="catego">
+                    <a class="an" href="">
+                        <i class="fa-solid fa-list"></i>
+                        categoria
+                    </a>
+                </div>
+                <div class="opcion">
+                    <a class="an" href="">novedades</a>
+                    <a class="an" href="">descuentos</a>
+                    <a class="an" href="">mas vendido</a>
+                    <a class="an" href="">mas v</a>
+                </div>
+            </nav>
+        </header>
+    
+        <main>
+            {% block content %}
+            <!-- Content will be inserted here -->
+            {% endblock %}
+        </main>
+    
+        <footer>
+            <div class="parrafo">
+                <p>todo los derechos reservados al los creadores</p>
+                <p>APLICATIVO EN DESARROLLO</p>
+            </div>
+            <div class="lista">
+                <a class="lg" href=""><i class="fa-brands fa-square-facebook"></i></a>
+                <a class="lg" href=""><i class="fa-brands fa-square-whatsapp"></i></a>
+                <a class="lg" href=""><i class="fa-brands fa-square-instagram"></i></a>
+                <a class="lg" href=""><i class="fa-brands fa-square-x-twitter"></i></a>
+            </div>  
+        </footer>
+    </div>
 </body>
 </html>
