--- a/templates/tienda/home.html
+++ b/templates/tienda/home.html
@@ -3,8 +3,9 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h2>Home</h2>
-    <p>Hello!!!</p>
+<div>
+    <h1>contenido</h1>
+</div>
 
 
 
